// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletPrimarySegmentedMeasure 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartBulletPrimarySegmentedMeasure 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    >
      <g
        role="presentation"
      >
        <path
          d="M 50, 94.3 
A 0 0 0 0 1, 50, 94.3 
L 50, 85.3 
A 0 0 0 0 1, 50, 85.3 
L 399.99999999976666, 85.3 
A 0 0 0 0 1, 399.99999999976666, 85.3 
L 399.99999999976666, 94.3 
A 0 0 0 0 1, 399.99999999976666, 94.3 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--300, #002f5d); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
      <g
        role="presentation"
      >
        <path
          d="M 50, 94.3 
A 0 0 0 0 1, 50, 94.3 
L 50, 85.3 
A 0 0 0 0 1, 50, 85.3 
L 399.9999999995882, 85.3 
A 0 0 0 0 1, 399.9999999995882, 85.3 
L 399.9999999995882, 94.3 
A 0 0 0 0 1, 399.9999999995882, 94.3 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--200, #8bc1f7); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
      <g
        role="presentation"
      >
        <path
          d="M 50, 94.3 
A 0 0 0 0 1, 50, 94.3 
L 50, 85.3 
A 0 0 0 0 1, 50, 85.3 
L 399.9999999993, 85.3 
A 0 0 0 0 1, 399.9999999993, 85.3 
L 399.9999999993, 94.3 
A 0 0 0 0 1, 399.9999999993, 94.3 
 z"
          index="0"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); stroke: var(--pf-chart-bar--data--stroke, none); padding: 8px; stroke-width: 0;"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;
